--- a/apps/web-page/src/index.css
+++ b/apps/web-page/src/index.css
@@ -17,11 +17,7 @@
     width: 100%;
     height: 100%;
     z-index: -1;
-    background-image: url('https://images.unsplash.com/photo-1477959858617-67f85cf4f1df?auto=format&fit=crop&q=80&w=2000');
-    background-size: cover;
-    background-position: center;
-    filter: blur(20px) brightness(0.6);
-    transform: scale(1.1);
+    background: #000000;
   }
 
 
